--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div><h4>
+	<div id="heading"><h3>
 		This is a Heading
-	</h4></div>
+	</h3></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
