--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="heading"><h3 class="main">
+	<div  class="main"><h3 id="heading" >
 		This is a Heading
 	</h3></div>
     <script type="text/javascript" src="./script.js">
